--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>My GitHub Page</title>
 </head>
 <body>
-    <h1>Welcome to My GitHub Page</h1>
+    <h1>Welcome to My GitHub Page</h1><br>
+    <a  href="/login.php">Click Here</a>
 </body>
 </html>
